--- a/app/gui/qt/theme/light/doc-styles.css
+++ b/app/gui/qt/theme/light/doc-styles.css
@@ -5,6 +5,10 @@ body {
   background-color: white;
 }
 
+ul {
+    font-size:  medium;
+}
+
 ul.toc {
   list-style-type: none;
 }
@@ -12,6 +16,11 @@ ul.toc {
 a {
   color: dodgerblue;
   text-decoration: none;
+}
+
+
+p {
+    font-size:  medium;
 }
 
 em {
@@ -98,7 +107,7 @@ code .info {
 }
 
 h1 {
-  font-size: xx-large;
+  font-size: larger;
   font-weight: bold;
   padding: 2px;
   color: white;
@@ -106,7 +115,7 @@ h1 {
 }
 
 h2 {
-  font-size: x-large;
+  font-size: large;
   font-weight: bold;
   padding: 2px;
   color: white;
